--- a/res/layout/full_playback_alt.xml
+++ b/res/layout/full_playback_alt.xml
@@ -21,7 +21,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 -->
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:vanilla="http://schemas.android.com/apk/res-auto" >
+	   xmlns:vanilla="http://schemas.android.com/apk/res-auto" >
 	<ch.blinkenlights.android.vanilla.CoverView
 		android:id="@+id/cover_view"
 		android:layout_height="fill_parent"
@@ -60,6 +60,12 @@ THE SOFTWARE.
 				android:paddingRight="5dip"
 				android:gravity="right" />
 			<TextView android:id="@+id/artist" android:textColor="?overlay_foreground_color"/>
+		</TableRow>
+		<TableRow>
+			<TextView
+				android:paddingRight="5dip"
+				android:gravity="right" />
+			<TextView android:id="@+id/quality" />
 		</TableRow>
 		<TableRow>
 			<TextView
@@ -160,19 +166,19 @@ THE SOFTWARE.
 		android:layout_marginTop="88dip"
 		android:orientation="horizontal"
 		vanilla:slider_handle_id="@+id/queue_slider">
-			<LinearLayout
-				android:id="@+id/queue_slider"
-				android:layout_height="wrap_content"
-				android:layout_width="fill_parent"
-				android:background="?overlay_background_color"
-				android:orientation="horizontal"
-				android:elevation="2dp">
-					<include layout="@layout/controls" />
-			</LinearLayout>
-			<fragment class="ch.blinkenlights.android.vanilla.ShowQueueFragment"
-				android:id="@+id/queue"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent" />
+		<LinearLayout
+			android:id="@+id/queue_slider"
+			android:layout_height="wrap_content"
+			android:layout_width="fill_parent"
+			android:background="?overlay_background_color"
+			android:orientation="horizontal"
+			android:elevation="2dp">
+			<include layout="@layout/controls" />
+		</LinearLayout>
+		<fragment class="ch.blinkenlights.android.vanilla.ShowQueueFragment"
+				  android:id="@+id/queue"
+				  android:layout_width="fill_parent"
+				  android:layout_height="fill_parent" />
 	</ch.blinkenlights.android.vanilla.SlidingView>
 
 
